--- a/src/index.css
+++ b/src/index.css
@@ -9,6 +9,17 @@
   font-style: normal;
 }
 
+
+@theme inline {
+  --animate-scroll: scroll var(--animation-duration, 40s) var(--animation-direction, forwards) linear infinite;
+ 
+  @keyframes scroll {
+    to {
+      transform: translate(calc(-50% - 0.5rem));
+    }
+  }
+}
+
 @custom-variant dark (&:is(.dark *));
 @plugin "daisyui";
 
